@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-09-15T00:39:30Z",
+  "timestamp" : "2022-09-15T16:08:18Z",
   "count_outdated" : 1782,
   "uniques_outdated" : 541,
   "count" : 1808,
-  "uniques" : 555,
+  "uniques" : 556,
   "clones" : [
     {
       "timestamp": "2022-09-01T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -86,6 +86,13 @@
       "timestamp": "2022-09-14T00:00:00Z",
       "count": 3,
       "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
