@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-09-01T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -60,6 +60,11 @@
     {
       "timestamp": "2022-09-14T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-15T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
