@@ -1,3 +1,11 @@
+2022-09-15T16:08:18Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3061977269
+* notice: last 14d: unq all: 5 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 541 1782 / 555 1808
+* notice: next accum: outdated-unq outdated-all / unq all: 541 1782 / 556 1808
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-01 2022-09-15]
+
 2022-09-15T00:39:30Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3057016479
 * notice: last 14d: unq all: 5 26
